--- a/index.html
+++ b/index.html
@@ -1,2 +1,84 @@
 # CheylaG.github.io
 #hola
+<!DOCTYPE HTML>
+<HTML>
+
+ <HEAD>
+    <style>
+		TABLE{font-size: 1em;font-family: courier ;color: pink;
+			
+			}
+
+		P span{color:green;}
+		 A span{color :orange;}
+		.resaltado{color:purple;}
+
+		
+
+		</style>
+ 
+</HEAD>
+
+ <BODY>
+      <TABLE>
+	
+	<TR>
+	<TD>   </TD>
+	<TD>  85 </TD>
+	<TD> 381 </TD>
+	<TD> 16</TD>
+	</TR>
+
+	
+
+	<TR>
+	<TD> <img src="m2/icon.png" alt=" "  width ="100"  heigth="100"> </TD>
+	<TD> publicaciones </TD>
+	<TD> seguidores </TD>
+	<TD> siguiendo </TD>
+	</TR>
+	
+	<TR>
+	<TD>            </TD>
+	<TD>            </TD>
+	<TD> <BUTTON>EDITAR PERFIL </BUTTON> </TD>
+	</TR>
+	</TABLE>
+
+	<TABLE>
+	<TR>
+	<TD> Leticia G  </TD>
+	<TD> Honduras  </TD>
+	</TR>
+	</TABLE>
+
+	<A href="www.facebook.com"> <span>www.facebook.com</span> </A>
+	<P> hobby<span> fotography</span> </P>
+	<P class="resaltado"> holaa </P>
+	<BR></BR>
+
+
+><TABLE>
+	
+	<TR>
+	<TD> <img/ src="m2/luces.jpg" alt="perfil" width="10%" heigth="5%">
+ 	<img/ src="m2/agua.jpg" alt="perfil" width="10%" heigth="5%">
+	 <img/ src="m2/camara.jpg" alt="perfil" width="10%" heigth="5%"></TD>
+	
+	</TR>
+
+	<TR>
+	<TD> <img/ src="m2/foco.jpg" alt="perfil" width="10%" heigth="10%">
+ 	<img/ src="m2/lente.jpg" alt="perfil" width="10%" heigth="10%">
+	 <img/ src="m2/pluma.jpg" alt="perfil" width="10%" heigth="10%"></TD>
+	
+	</TR>
+	
+ 	</TABLE>
+	
+	
+	<img/ src="m2/iconos.png" alt="perfil" width="35%" heigth="25%">
+    
+
+ </BODY>
+</HTML>
